fix(engine/engine-rest): resolve some code smells
- based on SonarLint input

related to CAM-9652