@@ -1,5 +1,5 @@
 /*
- * Copyright © 2013-2018 camunda services GmbH and various authors (info@camunda.com)
+ * Copyright © 2013-2019 camunda services GmbH and various authors (info@camunda.com)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -51,7 +51,7 @@ public class IntegerValueSerializer extends PrimitiveValueSerializer<IntegerValu
     Integer intValue = null;
 
     if(valueFields.getLongValue() != null) {
-      intValue = new Integer(valueFields.getLongValue().intValue());
+      intValue = Integer.valueOf(valueFields.getLongValue().intValue());
     }
 
     return Variables.integerValue(intValue);
