@@ -1,5 +1,5 @@
 /*
- * Copyright © 2013-2018 camunda services GmbH and various authors (info@camunda.com)
+ * Copyright © 2013-2019 camunda services GmbH and various authors (info@camunda.com)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -39,7 +39,7 @@ public class ShortValueSerializer extends PrimitiveValueSerializer<ShortValue> {
     Short shortValue = null;
 
     if(longValue != null) {
-      shortValue = new Short(longValue.shortValue());
+      shortValue = Short.valueOf(longValue.shortValue());
     }
 
     return Variables.shortValue(shortValue);
